--- a/view/shipment_out_form.xml
+++ b/view/shipment_out_form.xml
@@ -2,7 +2,7 @@
 <!-- The COPYRIGHT file at the top level of this repository contains the full
      copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/group[@id='state_buttons']/group[@id='buttons']" position="inside">
-        <button name="partial_shipment" confirm="Are you sure to remove inventory moves that are in draft state?"/>
+    <xpath expr="/form/group[@id='buttons']" position="inside">
+        <button name="partial_shipment"/>
     </xpath>
 </data>
